# Crucible-Editor

./: .gitignore  .gitmodules  CMakeLists.txt  CrucibleEditor.manifest
dotnet/CrucibleEditor/: CrucibleEditor.sln
dotnet/CrucibleEditor/Crucible-Editor/: App.axaml  App.axaml.cs  ComponentViewLocator.cs  Crucible-Editor.csproj  GameWorldController.cs  Main.cs  MainWindow.axaml  MainWindow.axaml.cs
dotnet/CrucibleEditor/Crucible-Editor/Controls/: CrucibleWindow.cs  PropertyViewer.axaml  PropertyViewer.axaml.cs  SceneTree.axaml  SceneTree.axaml.cs  SceneView.cs
dotnet/CrucibleEditor/Crucible-Editor/Controls/Components/: ComponentViewer.cs  Transform3dViewer.axaml  Transform3dViewer.axaml.cs
dotnet/CrucibleEditor/Crucible-Editor/Controls/Editors/: ComponentEditor.cs  Editor.cs  Transform3DControl.axaml  Transform3DControl.axaml.cs  Vector3Editor.axaml  Vector3Editor.axaml.cs
dotnet/CrucibleEditor/Crucible-Editor/Controls/Editors/Properties/: Vector3Editor.axaml  Vector3Editor.axaml.cs
dotnet/CrucibleEditor/Crucible-Editor/Converters/: GameObjectToPropertiesConverter.cs  NodeToPropertiesConverter.cs  TypeToNameConverter.cs  Vector3ToStringConverter.cs
dotnet/CrucibleEditor/Crucible-Editor/Editors/: AbstractEditor.cs  BasicEditor.axaml  BasicEditor.axaml.cs
dotnet/CrucibleEditor/Crucible-Editor/Editors/PropertyControls/: AbstractPropertyControl.cs  PropertyControl.cs  PropertyControlRegistry.cs
dotnet/CrucibleEditor/Crucible-Editor/Editors/PropertyControls/Defaults/: Transform3DControl.axaml  Transform3DControl.axaml.cs  Vector3Control.axaml  Vector3Control.axaml.cs
dotnet/CrucibleEditor/Crucible-Editor/GUI/: ImGUI.cs  ProgramInterface.cs  Widget.cs
dotnet/CrucibleEditor/Crucible-Editor/GUI/Controls/: Control.cs  InspectorRenderer.cs
dotnet/CrucibleEditor/Crucible-Editor/GUI/Controls/Inspector/: InspectorComponentView.cs  TransformView.cs  Vector3dView.cs
dotnet/CrucibleEditor/Crucible-Editor/GUI/Widgets/: Inspector.cs  MainViewport.cs  Resources.cs  SceneTree.cs
dotnet/CrucibleEditor/Crucible-Editor/Util/: GameObjectExtensions.cs  MemberInfoExtensions.cs
dotnet/CrucibleEditor/Crucible-Editor/Utils/: ReflectionExtension.cs
src/: Editor.cpp  Editor.h  Main.cpp  Program.cpp
src/Controls/: Control.h  Inspector.cpp  Inspector.h  MainViewport.cpp  MainViewport.h  MenuBar.cpp  MenuBar.h  Resources.cpp  Resources.h  SceneTree.cpp  SceneTree.h
src/Graphics/: Fonts.h
src/Graphics/DearImGUI/: ImGuiInterop.cpp  ImGuiInterop.h  imgui_impl_slag.cpp  imgui_impl_slag.h
src/Graphics/DefaultShaders/: dearimgui.vert  flat.frag  flat.vert
src/Interop/: EditorInterop.cpp  EditorInterop.h
src/dear-imgui/: imgui_impl_slag.cpp  imgui_impl_slag.h
